--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,8 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
-
 // Variables
 @import 'variables';
-
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+// Datatables
+@import '~datatables.net-bs4/css/dataTables.bootstrap4.css';
