Module: Subject and fix Course Migration

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,7 @@
 @import '~bootstrap/scss/bootstrap';
 // Datatables
 @import '~datatables.net-bs4/css/dataTables.bootstrap4.css';
+// Select2
+@import '~select2/dist/css/select2.min.css';
+// Select2 Bootstrap 4
+@import '~select2-theme-bootstrap4/dist/select2-bootstrap.css';
